--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="One more blog about software engineering" />
 <script type="application/ld+json">
-{"description":"My adventures in software engineering, databases and distributed systems.","headline":"One more blog about software engineering","@type":"WebPage","url":"https://mtkachenko.me/blog/404.html","@context":"https://schema.org"}</script>
+{"description":"My adventures in software engineering, databases and distributed systems.","@type":"WebPage","url":"https://mtkachenko.me/blog/404.html","headline":"One more blog about software engineering","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/main.css"><link type="application/atom+xml" rel="alternate" href="https://mtkachenko.me/blog/feed.xml" title="One more blog about software engineering" /></head>
 <body><header class="site-header" role="banner">
