fixed link in the title and enabled tags page

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
 		<div class="content">
 			<header>
 	<div class="main">
-		<a href="https://mtkachenko.me/">Software engineering blog without title</a>
+		<a href="https://mtkachenko.me/blog">Software engineering blog without title</a>
 	</div>
 	<nav>
+		
+		<a href="/blog/">Home</a>
+		
+		<a href="/blog/tags">Tags</a>
 		
 		
 	</nav>
